# graindr-dpf

./: CMakeLists.txt  OPTIMIZATIONS.md  README.md
dsp/: CircularBuffer.hpp  DryWetMixer.hpp  DspMath.hpp  EnvelopeDetector.hpp  FastMath.hpp  FastMathLFO.hpp  GranularPitchShifter.hpp  PitchShifterContainer.hpp  SmoothedValue.hpp  VASVFilter.hpp
plugin/: DistrhoPluginInfo.h  GraindrPlugin.cpp  GraindrPlugin.hpp  GraindrUI.cpp  GraindrUI.hpp  ParameterMetadata.hpp
test/: CMakeLists.txt  README.md  compare_wavs.py  null_test_vs_juce.sh  test_circular.cpp  test_container.cpp  test_drywet.cpp  test_dsp_math.cpp  test_envelope.cpp  test_fastmath.cpp  test_granular.cpp  test_lfo.cpp  test_plugin_offline.cpp  test_smoothed.cpp  test_vasv_filter.cpp
test/fixtures/: generate_input.py
